--- a/main.css
+++ b/main.css
@@ -12,12 +12,52 @@
       blink-caret .5s step-end infinite;
   }
   
+  .Workdisc{
+      padding: 100px;
+  }
   .card{
-      height: 200px;
+      padding:10px;
+      min-height: 200px;
       background-color:rgba(54, 51, 51, 0.3); 
-      color: white;
-      font-weight: 300px;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+      color: black;
+      font-weight: 300;
+      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+  }
+
+  .card .postion{
+      background-color: rgb(196, 255, 237);
+      color: rgb(15, 152, 156);
+      font-weight: 400;
+      margin-right:12px;
+      margin-left: 12px; 
+      padding: 5px
+  }
+  .card .duration{
+    background-color: rgb(130, 250, 156);
+    color: rgb(11, 138, 49);
+    font-weight: 400;
+    margin-right:12px;
+    margin-left: 12px; 
+    padding: 5px
+}
+  .card .company{
+      background-color: bisque;
+      color: rgb(243, 82, 82);
+      font-weight: 400;
+      margin-right:12px;
+      margin-left: 12px; 
+      padding: 5px
+  }
+
+  .card .technology{
+      position: fixed;
+      border-top: #eeeeee;
+  }
+
+  .card .discription{
+      overflow: scroll;
+      height: 200px;
+      width: 100%;
   }
 
   .typewrite{
@@ -44,7 +84,13 @@
 
 
 
-
+  @media screen and (max-width: 480px) {
+    .Workdisc{
+        padding: 30px;
+        padding-top: 120px;
+    }
+    
+  }
 
 
 
